Make subtest take up 70% of width in matrix.

--- a/matrix.hbs
+++ b/matrix.hbs
@@ -33,6 +33,9 @@
    pre, code.hljs{
      overflow: auto;
    }
+   .subtest {
+     width: 70%;
+    }
   </style>
   <div class="row justify-center">
     <table class="simple">
