--- a/body.hbs
+++ b/body.hbs
@@ -7,3 +7,34 @@
   {{this}}
   {{/each}}
 </section>
+
+<section class="informative" id="conformance-testing-results">
+  <h2> Conformance Testing Results </h2>
+  <section class="informative" id="Key">
+    <h3>Key</h3>
+    <ul>
+      <li>
+✓ - Success
+      </li>
+      <li>
+❌ - Error
+      </li>
+      <li>
+no support - Implementation explicitly does not support this feature
+      </li>
+      <li>
+untested - This test is new, implementation has not been run on it yet
+      </li>
+      <li>
+Listed on the left side are the expected features.
+      </li>
+      <li>
+Listed on the top are verifiers.
+      </li>
+    </ul>
+  </section>
+
+  <p>
+  The results of the tests are show below:
+  </p>
+</section>
